support multi-language

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -32,5 +32,8 @@
   "assetNameLong": "Name Too Long",
 
   "assetAssets": "Assets",
-  "assetWalletList": "Wallet List"
+  "assetWalletList": "Wallet List",
+
+  "mineManageWallet" : "Manage Wallets",
+  "mineCurrentVersion" : "CurrentVersion"
 }
