support multi-language

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -64,6 +64,9 @@
   "assetSetPassword": "Set Password",
   "assetConfirmPassword": "Confirm Password",
 
+  "assetReceivingQrCode": "Receiving QR Code",
+  "assetCopyAddress": "Copy Address",
+
   "mineManageWallet" : "Manage Wallets",
   "mineCurrentVersion" : "CurrentVersion"
 }
