support multi-language

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -30,6 +30,9 @@
   "commonMax": "MAX",
   "commonSend": "Send",
 
+  "commonScan": "Scan",
+  "commonPhotoAlbum": "Photo Album",
+
   "assetMyAssets": "My Assets",
   "assetDetails": "Details",
   "assetTransfer": "Transfer",
