--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -32,6 +32,7 @@
 
   "commonScan": "Scan",
   "commonPhotoAlbum": "Photo Album",
+  "commonCurrent": "current",
 
   "assetMyAssets": "My Assets",
   "assetDetails": "Details",
@@ -95,5 +96,6 @@
   "commonError3": "password error",
 
   "mineManageWallet" : "Manage Wallets",
-  "mineCurrentVersion" : "CurrentVersion"
+  "mineCurrentVersion" : "Current Version",
+  "mineNoWallet": "No Wallet"
 }
