support multi-language

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -97,5 +97,6 @@
 
   "mineManageWallet" : "Manage Wallets",
   "mineCurrentVersion" : "Current Version",
-  "mineNoWallet": "No Wallet"
+  "mineNoWallet": "No Wallet",
+  "mineLangTip1": "whether to switch language"
 }
