--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -95,6 +95,20 @@
   "commonError2": "password is 6 digits",
   "commonError3": "password error",
 
+  "swapTips01": "trading:  directly to the platform of JustSwap",
+  "swapSend": "Send",
+  "swapReceive": "Receive",
+  "swapBalance": "Balance",
+  "swapPooledTokens": "Pooled Tokens",
+  "swapSwap": "Swap",
+  "swapTokenName": "Token Name",
+  "swapTokenPrice": "Price (USD)",
+  "swapTokenBalance": "Balance",
+  "swapPool": "Pool",
+  "swapTotalLiquidity": "Total Liquidity",
+  "swapToken": "Token",
+  "swapTokenNotEnough": "Token Not Enough",
+
   "mineManageWallet" : "Manage Wallets",
   "mineCurrentVersion" : "Current Version",
   "mineNoWallet": "No Wallet",
