--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -95,6 +95,20 @@
   "commonError2": "密码为6位",
   "commonError3": "密码错误",
 
+  "swapTips01": "交易:  聚合JustSwap平台",
+  "swapSend": "发送",
+  "swapReceive": "接收",
+  "swapBalance": "余额",
+  "swapPooledTokens": "资金池",
+  "swapSwap": "兑换",
+  "swapTokenName": "Token 名称",
+  "swapTokenPrice": "价格 (USD)",
+  "swapTokenBalance": "余额",
+  "swapPool": "资金池",
+  "swapTotalLiquidity": "总流动性",
+  "swapToken": "Token",
+  "swapTokenNotEnough": "余额不足",
+
   "mineManageWallet" : "钱包管理",
   "mineCurrentVersion" : "当前版本",
   "mineNoWallet": "暂无钱包",
