--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -95,12 +95,14 @@
   "commonError2": "密码为6位",
   "commonError3": "密码错误",
 
+  "swapMarket": "行情",
+  "swapSwap": "兑换",
+
   "swapTips01": "交易:  聚合JustSwap平台",
   "swapSend": "发送",
   "swapReceive": "接收",
   "swapBalance": "余额",
   "swapPooledTokens": "资金池",
-  "swapSwap": "兑换",
   "swapTokenName": "Token 名称",
   "swapTokenPrice": "价格 (USD)",
   "swapTokenBalance": "余额",
