--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -106,8 +106,8 @@
   "swapReceive": "Receive",
   "swapBalance": "Balance",
   "swapPooledTokens": "Pooled Tokens",
-  "swapTokenName": "Token Name",
-  "swapTokenPrice": "Price (USD)",
+  "swapTokenName": "Name",
+  "swapTokenPrice": "Price",
   "swapTokenBalance": "Balance",
   "swapPool": "Pool",
   "swapTotalLiquidity": "Total Liquidity",
