--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -106,8 +106,8 @@
   "swapReceive": "接收",
   "swapBalance": "余额",
   "swapPooledTokens": "资金池",
-  "swapTokenName": "Token 名称",
-  "swapTokenPrice": "价格 (USD)",
+  "swapTokenName": "名称",
+  "swapTokenPrice": "价格",
   "swapTokenBalance": "余额",
   "swapPool": "资金池",
   "swapTotalLiquidity": "总流动性",
