--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -124,5 +124,9 @@
   "mineVersionTips1": "已经是最新版本",
   "mineVersionNew": "新版本",
   "mineVersionTips2": "以后再说",
-  "mineVersionTips3": "立即体验"
+  "mineVersionTips3": "立即体验",
+  "mineAppUpdating": "更新中...",
+  "mineAppDownloadProgress": "下载进度:   ",
+  "mineAppReadyToDownload": "准备下载...",
+  "mineAppDownloadFail": "更新失败，请稍后再试"
 }
